<resources>
    <string name="app_name">DoAn</string>
    <string name="key_api_google_map">AIzaSyAU7gVtnVKyrasCLaFjsQ6xUlqsfSaGCQQ</string>

    <string name="welcome">
        <b>Welcome!\nYou are not currently logged in.\nPlease log in to get started.</b>
    </string>

    <string name="login"><b>Đăng nhập</b></string>

    <string name="username1"><b>Linh Xe Ôm</b></string>

    <string name="routename1"><b>Tăng Nhơn Phú</b></string>

    <string name="latest">Gần đây:</string>

    <string name="latesttime"><b>05/11/2024</b></string>

    <string name="title"><b>Phát hiện ổ gà</b></string>
    <string name="title_activity_main_dashboard">Màn hình chính</string>
    <string name="search">Nhập địa chỉ, thành phố hoặc Zip Code </string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Bản demo này cần có quyền truy cập vào địa điểm.</string>
    <string name="permission_rationale_location">Bạn cần truy cập vào dịch vụ định vị để sử dụng tính năng \'vị trí của tôi\', tính năng này hiển thị vị trí hiện tại của bạn trên bản đồ.</string>


    <!-- Khai báo String cho Authentication UI <HTAT> -->
    <string name="welcome_message">Chào mừng!\nBạn hiện đang không đăng nhập.\nVui lòng nhấn bắt đầu để đăng nhập.</string>

    <string name="btn_getStarted">Bắt đầu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_signup">Đăng kí</string>
    <string name="btn_finish">Hoàn tất</string>
    <string name="btn_continueWGoogle">Tiếp tục với google</string>
    <string name="btn_confirm">Xác nhận</string>
    <string name="btn_findRoute">Tìm tuyến đường</string>

    <string name="txt_choose_destination">Chọn điểm đến hoặc chấm trên bản...</string>
    <string name="txt_choose_starting_point">Chọn điểm bắt đầu</string>
    <string name="txt_username">Tên người dùng</string>
    <string name="txt_opt">OTP CODE</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Mật Khẩu</string>
    <string name="txt_rePassword">Xác nhận mật khẩu</string>
    <string name="txt_forgotPassword"><u>Quên mật khẩu?</u></string>
    <string name="txt_askSignUp">Không có tài khoản? <u>Đăng kí</u></string>
    <string name="txt_askLogin">Đã có tài khoản? <u>Đăng nhập</u></string>
    <string name="txt_newPassword">Mật khẩu mới</string>
    <string name="txt_cfPassword">Xác nhận mật</string>
    <string name="txt_note"><b>Lưu ý</b>: Không đặt lại mật khấu đã từng sử dụng!</string>
    <string name="txt_popupEmail">Lấy lại tài khoản</string>
    <string name="txt_popupNote">Để đặt lại mật khẩu cho tài khoản, vui lòng nhập email được liên kết với tài khoản của bạn.</string>
    <string name="txt_optNote">Vui lòng nhập mã <b>OTP</b> đã được gửi về Email của bạn để xác nhận.</string>

    <!-- String potholes details <HTAT> -->
    <string name="txt_title_details">Thông tin chi tiết của  ổ gà</string>
    <string name="txt_location">Vị trí:</string>
    <string name="txt_date">Ngày phát hiện:</string>
    <string name="txt_severity">Mức độ nghiêm trọng:</string>
    <string name="txt_image">Hình ảnh:</string>
    <string name="txt_preview_image">Ảnh xem trước</string>
    <string name="txt_detect">Phát hiện ổ gà!</string>
    <string name="txt_notification">Thông báo</string>
    <string name="txt_user">Đóng góp bởi</string>



    <string name="btn_image">Thêm hình ảnh</string>
    <string name="btn_saving">Lưu thông tin</string>
    <string name="btn_navigation">Bắt đầu</string>
    <string name="btn_all">Tất cả</string>
    <string name="btn_unread">Chưa đọc</string>

    <string name="editText_newPassword">Nhập mật khẩu mới</string>
    <string name="editText_cfPassword">Nhập lại mật khẩu mới</string>
    <string name="editText_username">Nhập tên người dùng</string>
    <string name="editText_email">Nhập Email tại đây</string>
    <string name="editText_password">Nhập mật khẩu tại đây</string>
    <string name="editText_opt">Nhập OTP code tại đây</string>

    <string name="or">Hoặc</string>
    <string name="language_ENG">ENG</string>
    <string name="language_VIE">VIE</string>
    <!-- Kết thức phần khai báo String cho Authentication UI <HTAT> -->

    <string name="test"> test</string>

    <string name="setting">Cài đặt chung</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="web_client_id">72747195748-oluln8fl186idv8nm9qod0831k8oi04j.apps.googleusercontent.com</string>

    <string name="default_web_client_id">72747195748-v759vtnhb8b8f30veta4ad6ehsuud9tu.apps.googleusercontent.com</string>

    <!-- String for dashboarc   -->
    <string name="all_user">Tất cả người dùng</string>
    <string name="all_route">Tất cả tuyến đường</string>
    <string name="txt_7_lastdays">Trong 7 ngày gần nhất</string>
    <string name="txt_serverity">Mức độ nguy hiểm</string>
    <string name="txt_traveled">Số km đã đi:</string>
    <string name="txt_contributed">Số lần đóng góp:</string>
    <string name="txt_potholes">Ổ gà</string>

    <!-- String for map   -->
    <string name="btn_route">Tuyến đường</string>
    <string name="btn_start_route">Bắt đầu</string>

    <string name="search_start_ET">Vị Trí của tôi</string>
    <string name="text_pothole">Ổ gà</string>
    <string name="infor_pothole_delete">Xóa ổ gà</string>


    <string name="search_edittext">Tìm kiếm địa chỉ</string>
    <string name="main_home">Trang chủ</string>
    <string name="main_map">Bản đồ</string>
    <string name="main_setting">Cài đặt</string>

    <!-- String for the setting -->
    <string name="txt_language">Ngôn ngữ</string>
    <string name="txt_VIE">Tiếng Việt</string>
    <string name="txt_ENG">Tiếng Anh</string>
    <string name="txt_notification_setting">Thông báo</string>
    <string name="txt_weekly_report">Báo cáo hàng tuần</string>
    <string name="txt_isContributor">Chế độ đóng góp</string>
    <string name="txt_detection_sensitivity">Độ nhạy phát hiện</string>
    <string name="txt_about">Về chúng tôi</string>
    <string name="profile">Thông tin chung</string>
</resources>