<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/color_2">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@android:color/transparent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <!-- Header -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_details"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:paddingBottom="8dp" />

    <!-- Vị trí ổ gà -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/tvLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_location"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trống"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Ngày phát hiện -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardLocation"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/tvDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_date"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trống"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Mức độ nghiêm trọng -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardSeverity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardDate"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/tvSeverityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_severity"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvSeverity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trống"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Thêm hình ảnh -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardSeverity"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="11dp">

            <TextView
                android:id="@+id/tvAddImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_image"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="14dp"
                android:background="#E0E0E0"
                android:contentDescription="@string/txt_preview_image"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add_picture" />

            <Button
                android:id="@+id/btnAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/color_1"
                android:text="@string/btn_image"
                android:textColor="@color/color_word"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Button xác nhận -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardAddImage"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btn_saving"
        android:backgroundTint="@color/color_1"
        android:textColor="@color/color_word"
        android:padding="8dp"
        android:textSize="24sp"/>
</RelativeLayout>