<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/img_background"
    android:id="@+id/id_screenSignup"
    tools:context=".SignupActivity">

    <Switch
        android:id="@+id/sw_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:track="@drawable/track"
        android:thumb="@drawable/thumb">
    </Switch>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sw_language"
        android:layout_above="@id/bottom">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Tiêu đề "Login into account" -->
            <ImageView
                android:id="@+id/img_signupMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="92dp"
                android:src="@drawable/img_signupmessage" />

            <!-- CardView chứa Email và Password -->
            <androidx.cardview.widget.CardView
                android:id="@+id/signup_card"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_signupMessage"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:layout_marginTop="200dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <!-- Nhãn Username -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_username"
                        android:textColor="@color/color_1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginBottom="6dp"/>

                    <!-- Ô nhập Username -->

                    <!-- Nhãn Email -->

                    <EditText
                        android:id="@+id/editText_username_scrSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:autofillHints=""
                        android:background="@drawable/rounded_textbox"
                        android:gravity="center_vertical"
                        android:hint="@string/editText_username"
                        android:inputType="textPersonName"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:padding="10dp"
                        android:textColorHint="@color/opacity_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_email"
                        android:textColor="@color/color_1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="6dp"/>

                    <!-- Ô nhập Email -->
                    <EditText
                        android:id="@+id/editText_Email_scrSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:autofillHints=""
                        android:gravity="center_vertical"
                        android:background="@drawable/rounded_textbox"
                        android:hint="@string/editText_email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/opacity_black"
                        android:padding="10dp"
                        android:minHeight="48dp"
                        android:minWidth="48dp"/>

                    <!-- Nhãn Password -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_password"
                        android:textColor="@color/color_1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="6dp"/>

                    <!-- Ô nhập Password -->
                    <EditText
                        android:id="@+id/editText_password_scrSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:autofillHints=""
                        android:gravity="center_vertical"
                        android:background="@drawable/rounded_textbox"
                        android:drawableEnd="@drawable/ic_show_password"
                        android:hint="@string/editText_password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/opacity_black"
                        android:padding="10dp"
                        android:minHeight="48dp"
                        android:minWidth="48dp" />

                    <!-- Nhãn Re-Password -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rePassword"
                        android:textColor="@color/color_1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="6dp"/>

                    <!-- Ô nhập Re-Password -->
                    <EditText
                        android:id="@+id/editText_rePassword_scrSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:background="@drawable/rounded_textbox"
                        android:drawableEnd="@drawable/ic_show_password"
                        android:hint="@string/editText_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColorHint="@color/opacity_black"
                        android:padding="10dp"
                        android:minHeight="48dp"
                        android:minWidth="48dp" />

                    <!-- Signup Button -->
                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:backgroundTint="@color/color_1"
                        android:text="@string/btn_signup"
                        android:textColor="@color/color_word"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginTop="30dp"
                        android:minHeight="48dp"
                        android:minWidth="48dp"
                        app:cornerRadius="12dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <!-- Layout chứa box hỏi người dùng đăng kí và đăng nhập bằng google -->
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@drawable/rounded_top_corners"
        android:padding="16dp">

        <!-- Dòng hỏi người dùng nếu chưa có tài khoản -->
        <TextView
            android:id="@+id/txt_askLogin_scrSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/txt_askLogin"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Divider và chữ "OR" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/opacity_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textStyle="bold"
                android:textColor="@color/opacity_black"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/opacity_black" />
        </LinearLayout>

        <!-- Nút "Continue with Google" -->
        <Button
            android:id="@+id/btn_continueWGoogle_scrSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/img_google"
            android:text="@string/btn_continueWGoogle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:paddingStart="65dp"
            android:paddingEnd="65dp"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
</RelativeLayout>